# python-project-lvl1

./: Makefile  README.md  pyproject.toml
.github/workflows/: github-actions-demo.yml
brain_games/: cli.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
