[tool.poetry]
name = "hexlet-code"
version = "1"
description = "project"
authors = ["Timofey"]
license = "no"
packages = [ { include = "brain_games" }, ]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
